crates/aimee_app/src/snapshots/aimee_app__operation__tests__follow_up_no_question.snap
---
source: crates/aimee_app/src/operation.rs
expression: to_value(actual)
---
<interrupted>No feedback provided</interrupted>
