crates/aimee_app/src/snapshots/aimee_app__operation__tests__fs_create_overwrite.snap
---
source: crates/aimee_app/src/operation.rs
expression: to_value(actual)
---
<file_overwritten
  path="/home/user/existing_file.txt"
  total_lines="1"
>
<file_diff><![CDATA[1   |-Old content
  1 |+New content for the file
]]></file_diff>
</file_overwritten>
