crates/aimee_app/src/snapshots/aimee_app__operation__tests__fs_create_with_warning.snap
---
source: crates/aimee_app/src/operation.rs
expression: to_value(actual)
---
<file_created
  path="/home/user/file_with_warning.txt"
  total_lines="1"
>
<warning>
<message>Syntax validation failed</message>
<file
  path="/home/user/file_with_warning.txt"
>
</file>
<details>The file was written successfully but contains 1 syntax error(s)</details>
<error
  line="10"
  column="5"
><![CDATA[Syntax error on line 10]]>
</error>
<suggestion>Review and fix the syntax issues</suggestion>
</warning>
</file_created>
